--- a/vignettes/AHBioImageDbs.Rmd
+++ b/vignettes/AHBioImageDbs.Rmd
@@ -11,7 +11,7 @@ author:
   affiliation: RIKEN Center for Biosystems Dynamics Research
 date: "`r Sys.Date()`"
 graphics: no
-package: AHBioImageDbs, knitr
+package: AHBioImageDbs, knitr, magick
 output:
     BiocStyle::html_document:
         toc_float: true
@@ -137,7 +137,7 @@ We visualize the files using `magick::image_read` function.
 
 ```{r}
 qr <- query(ah, c("BioImageDbs", ".gif"))
-(magick::image_read(qr[1]))
+#(magick::image_read(qr[1]))
 ```
 
 # A simple execution command using Keras/Tensorflow
